outputs/main/hsevo_bpp_online_2025-08-07_17-54-43/problem_iter14_response9.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 16
    We need to correct the code. Let's write final version correctly.
                                    ^
SyntaxError: unterminated string literal (detected at line 16)
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 16
    We need to correct the code. Let's write final version correctly.
                                    ^
SyntaxError: unterminated string literal (detected at line 16)
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 16
    We need to correct the code. Let's write final version correctly.
                                    ^
SyntaxError: unterminated string literal (detected at line 16)
